feat: add a playback_ready field to the "/" api response (#298)
